test/error/error.input095.zc
Variable can not be initialised:x on line 1
